bk_ida/gccida/g3/canon_reg
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canon_reg/src/cse.c:3303:22: error: expected identifier or '('
 struct cse_reg_info = get_cse_reg_info( rtuint); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canon_reg/src/cse.c:3340:4: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
|| insn_data_0[rtint].n_dups > 0) ) 
   ^~~~~~~~~~~
   insn_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canon_reg/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/canon_reg/src/obj/cse.o] Error 1
